--- a/src/pages/landingpage.css
+++ b/src/pages/landingpage.css
@@ -34,13 +34,13 @@
     margin-right: 10px;
     align-self: start;
     white-space: nowrap;
+    margin-bottom: 0;
 }
 
 .landingcontent{
     margin: 7% 20%;
     display: flex;
     flex-direction: row;
-
 }
 
 .timespan
