--- a/src/pages/landingpage.css
+++ b/src/pages/landingpage.css
@@ -1,15 +1,25 @@
 .jobcard{
-    border-radius: 10px;
+
     /*box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);*/
     display: flex;
     flex-direction: row;
-    gap: 100px;
-    margin: 10px;
-    align-items: flex-start;
-
+    gap: 20px;
+    /*margin-left: 10px;*/
+    justify-content: left;
+    padding-top: 10px;
+    padding-: 10px;
+    margin: 1% 7%;
 }
 
-.jobcard:hover {
+.jobsummary{
+    max-width: 60%;
+    margin-right: auto;
+    padding-left: 20px;
+    border-radius: 10px;
+}
+
+
+.jobsummary:hover {
     background: #112549;
 }
 
@@ -26,30 +36,31 @@
     color: #5fe6c6;
     border-radius: 10px / 15px;
     padding: 5px 20px;
-    white-space: nowrap;
 }
 
 .myname{
     font-size: 60px;
     margin-right: 10px;
     align-self: start;
-    white-space: nowrap;
     margin-bottom: 0;
 }
 
 .landingcontent{
-    margin: 7% 20%;
+    margin: 5% 20%;
     display: flex;
     flex-direction: row;
+}
+
+.workandschool{
+
 }
 
 .timespan
 {
     font-size: small;
     font-weight: lighter;
-    white-space: nowrap;
-    align-self: start;
     margin-left: auto;
+    margin-top: 30px;
 }
 
 .summaryside{
@@ -69,6 +80,10 @@
 .vl{
     margin-top: 50px;
     border-bottom: 2px solid #cad6f6;
+    max-width: 80%;
+    margin: auto;
+    padding-top: 20px;
+
 }
 
 a, a:visited{
